--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-HELLO ALL
-JENKINS WEBPAGE
-ENJOY!!!!
-
-ALL MACHINES LINKED
-FINALLY!!!
+MY FIRST PIPELINES PAGE,
+BUILD ON JENKINS
 
 
-UPDATED FROM GIT!!!!!
-UPDATE 2.0
+THANK YOU! :)
